# DocMolder

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
deploy/: 52docmolder-unattended-upgrades  alert-check.sh  auto-release.sh  backup-db.sh  check-perms.sh  docmolder-alertcheck.service  docmolder-alertcheck.timer  docmolder-autodeploy.service  docmolder-autodeploy.sh  docmolder-autodeploy.timer  docmolder-db-backup.service  docmolder-db-backup.timer  docmolder-duckdns.service  docmolder-duckdns.timer  docmolder-github-webhook.service  docmolder-reconcile.service  docmolder-reconcile.timer  docmolder.service  env-load.sh  github-webhook.env.example  install-auto-updates.sh  install-github-webhook.sh  install-python313.sh  install-static-site.sh  install-vps.sh  oracle-setup.sh  reconcile.sh  release.env.example  restore-db.sh  smoke-check.sh  update-duckdns.sh  update-vps.sh
docs/: AGENTS.md  AGENT_COORDINATION.md  ARCHITECTURE.md  BACKLOG.md  BRAND.md  CHANGELOG.md  CHECKLIST.md  CODEX_CLOUD_DEPLOY.md  CODEX_INTEGRATIONS.md  CODEX_TASK_PACKET.md  CODEX_TASK_PROMPTS.md  CONTEXT.md  DATA_MODEL.md  DECISIONS.md  DECISIONS_PENDING.md  DEPLOY_ORACLE.md  EXCEL_PIPELINE.md  GITHUB_ALIGNMENT.md  GITHUB_MAINTENANCE.md  INDEX.md  LOCAL_DEV.md  LOCAL_SETUP.md  MILESTONE_BOARD.md  MVP.md  ONE_DOT_ZERO_READINESS.md  OPERATIONS.md  OPERATIONS_SECURITY.md  PDF_PIPELINE.md  RELEASE_PROCESS.md  ROADMAP.md  ROADMAP_HISTORY.md  SECURITY_HARDENING.md  SERVICE_GOVERNANCE.md  SMOKE_TESTS.md  TELEGRAM_OPERATIONS.md  TESTING.md  TOOLCHAIN.md  VERSIONING.md  VPS_RUNBOOK.md  doppler-setup.md
githooks/: pre-commit  pre-push
scripts/: agent_handoff.py  agent_parallel_safe.py  agent_start.py  auto_release.py  check_codex_bot_comments.py  check_pr_policy.py  check_test_hygiene.py  ci_quality.sh  ci_static_verify.sh  ci_test.sh  ci_verify.sh  classify_changes.py  cleanup_merged_branches.sh  codex_dev_report.py  current_failed_runs.py  deploy_vps_from_codex.sh  generate_pr_body.py  github_maintenance_report.py  install_git_hooks.sh  ops_report.py  preflight_publish.sh  profile_processing_flows.py  publish_change.sh  publish_doctor.py  release_sanity.py  render_brand_assets.py  setup_codex_ssh.sh  smoke_telegram_desktop.py  sync_telegram_branding.py
tests/: test_action_catalog.py  test_agent_tools.py  test_auto_release.py  test_bot_admin.py  test_bot_admin_reports.py  test_bot_guided_actions.py  test_bot_history.py  test_bot_job_processing.py  test_bot_lifecycle.py  test_bot_offline_coverage.py  test_bot_processing_job.py  test_bot_text_flows.py  test_brand_assets.py  test_check_pr_policy.py  test_codex_reports.py  test_config.py  test_deploy_env_load.py  test_deploy_scripts.py  test_errors.py  test_excel_unlock.py  test_git_utils.py  test_github_webhook.py  test_healthcheck.py  test_job_flow.py  test_logging_utils.py  test_main.py  test_messages.py  test_models.py  test_processing_cleanup.py  test_processing_pipeline.py  test_publish_doctor.py  test_publish_scripts.py  test_rate_limit.py  test_reconcile.py  test_release_sanity.py  test_retry.py  test_sensitive_logging.py  test_services.py  (+6 more)
(+56 files in other folders)
