[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docmolder"
version = "0.7.0"
description = "Bot Telegram per trasformazioni documentali in italiano"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0,<22.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pillow>=12.1.1,<13.0",
  "pymupdf>=1.24,<2.0",
  "pypdf>=6.10.0,<7.0",
]

[project.scripts]
docmolder = "docmolder.main:main"
docmolder-fix-git-lock = "docmolder.git_utils:main"
docmolder-git-safe = "docmolder.git_utils:safe_git_main"
docmolder-healthcheck = "docmolder.healthcheck:main"
docmolder-reconcile = "docmolder.reconcile:main"
docmolder-sqlite-backup = "docmolder.sqlite_backup:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage>=7.10.7",
  "ruff==0.15.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
]
ignore = [
  "E501",
]

[tool.coverage.run]
source = ["src/docmolder"]

[tool.coverage.report]
show_missing = true
