[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docmolder"
version = "2.0.8"
description = "Bot Telegram per trasformazioni documentali in italiano"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22.0,<23.0",
  "opencv-python-headless>=5.0.0,<6.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.13.4,<3.0",
  "pydantic-settings>=2.14.2,<3.0",
  "pillow>=12.3.0,<13.0",
  "pymupdf>=1.28.0,<2.0",
  "pypdf>=6.14.2,<7.0",
]

[project.scripts]
docmolder = "docmolder.main:main"
docmolder-fix-git-lock = "docmolder.git_utils:main"
docmolder-git-safe = "docmolder.git_utils:safe_git_main"
docmolder-github-webhook = "docmolder.github_webhook:main"
docmolder-healthcheck = "docmolder.healthcheck:main"
docmolder-reconcile = "docmolder.reconcile:main"
docmolder-sqlite-backup = "docmolder.sqlite_backup:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage>=7.15.2",
  "ruff==0.15.22",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
]
ignore = [
  "E501",
]

[tool.coverage.run]
source = ["src/docmolder"]

[tool.coverage.report]
show_missing = true
fail_under = 85
